# my-epitech-cli

./: .gitignore  .gitmodules  README.md  flake.nix  main.py  setup.cfg
src/my_epitech_cli/: __main__.py
