[metadata]
name = my-epitech-cli
version = 0.0.1
author = Sigmanificient
description = CLI for my.epitech.eu stats
platform = unix, linux

[options]
packages =
    my_epitech_cli
python_requires = >=3.10

package_dir =
    = src
zip_safe = no
install_requires =
  requests==2.29.0
  python-dotenv==1.0.0

[options.entry_points]
console_scripts =
    my-epitech-cli = my_epitech_cli.__main__:main
